@@ -42,7 +42,7 @@ public class User {
     }
     
     public VisitedLocation getLastVisitedLocation() {
-        return visitedLocations.get(visitedLocations.size() - 1);
+        return visitedLocations.getLast();
     }
     
     public void addToVisitedLocations(VisitedLocation visitedLocation) {
